workspace(name = "substrate")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# To find additional information on this release or newer ones visit:
# https://github.com/bazelbuild/rules_rust/releases
http_archive(
 name = "rules_rust",
 urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.25.1/rules_rust-v0.25.1.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains",)


rust_register_toolchains(
 edition = "2021",
 versions = [
  "nightly/2023-05-23",
  "1.70.0",
 ],
)
rules_rust_dependencies()

http_archive(
    name = "com_google_protobuf",
    strip_prefix = "protobuf-4.23.3",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/refs/tags/v4.23.3.tar.gz",
    ],
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository",)
load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
	cargo_config = "//:.cargo/config.toml",
    lockfile = "//:Cargo.Bazel.lock",
	packages = {
		"rustversion": crate.spec(
            version = "1.0.6",
        ),
	},
    manifests = [
    "//:Cargo.toml",
	"//:bin/node-template/node/Cargo.toml",
    "//:bin/node-template/pallets/template/Cargo.toml",
    "//:bin/node-template/runtime/Cargo.toml",
    "//:bin/node/bench/Cargo.toml",
    "//:bin/node/cli/Cargo.toml",
    "//:bin/node/executor/Cargo.toml",
    "//:bin/node/inspect/Cargo.toml",
    "//:bin/node/primitives/Cargo.toml",
    "//:bin/node/rpc/Cargo.toml",
    "//:bin/node/runtime/Cargo.toml",
    "//:bin/node/testing/Cargo.toml",
    "//:bin/utils/chain-spec-builder/Cargo.toml",
    "//:bin/utils/subkey/Cargo.toml",
    "//:client/allocator/Cargo.toml",
    "//:client/api/Cargo.toml",
    "//:client/authority-discovery/Cargo.toml",
    "//:client/basic-authorship/Cargo.toml",
    "//:client/block-builder/Cargo.toml",
    "//:client/chain-spec/Cargo.toml",
    "//:client/chain-spec/derive/Cargo.toml",
    "//:client/cli/Cargo.toml",
    "//:client/consensus/aura/Cargo.toml",
    "//:client/consensus/babe/Cargo.toml",
    "//:client/consensus/babe/rpc/Cargo.toml",
    "//:client/consensus/beefy/Cargo.toml",
    "//:client/consensus/beefy/rpc/Cargo.toml",
    "//:client/consensus/common/Cargo.toml",
    "//:client/consensus/epochs/Cargo.toml",
    "//:client/consensus/grandpa/Cargo.toml",
    "//:client/consensus/grandpa/rpc/Cargo.toml",
    "//:client/consensus/manual-seal/Cargo.toml",
    "//:client/consensus/pow/Cargo.toml",
    "//:client/consensus/slots/Cargo.toml",
    "//:client/db/Cargo.toml",
    "//:client/executor/Cargo.toml",
    "//:client/executor/common/Cargo.toml",
    "//:client/executor/runtime-test/Cargo.toml",
    "//:client/executor/wasmtime/Cargo.toml",
    "//:client/informant/Cargo.toml",
    "//:client/keystore/Cargo.toml",
    "//:client/merkle-mountain-range/Cargo.toml",
    "//:client/merkle-mountain-range/rpc/Cargo.toml",
    "//:client/network-gossip/Cargo.toml",
    "//:client/network/Cargo.toml",
    "//:client/network/bitswap/Cargo.toml",
    "//:client/network/common/Cargo.toml",
    "//:client/network/light/Cargo.toml",
    "//:client/network/statement/Cargo.toml",
    "//:client/network/sync/Cargo.toml",
    "//:client/network/test/Cargo.toml",
    "//:client/network/transactions/Cargo.toml",
    "//:client/offchain/Cargo.toml",
    "//:client/proposer-metrics/Cargo.toml",
    "//:client/rpc-api/Cargo.toml",
    "//:client/rpc-servers/Cargo.toml",
    "//:client/rpc-spec-v2/Cargo.toml",
    "//:client/rpc/Cargo.toml",
    "//:client/service/Cargo.toml",
    "//:client/service/test/Cargo.toml",
    "//:client/state-db/Cargo.toml",
    "//:client/statement-store/Cargo.toml",
    "//:client/storage-monitor/Cargo.toml",
    "//:client/sync-state-rpc/Cargo.toml",
    "//:client/sysinfo/Cargo.toml",
    "//:client/telemetry/Cargo.toml",
    "//:client/tracing/Cargo.toml",
    "//:client/tracing/proc-macro/Cargo.toml",
    "//:client/transaction-pool/Cargo.toml",
    "//:client/transaction-pool/api/Cargo.toml",
    "//:client/utils/Cargo.toml",
    "//:frame/alliance/Cargo.toml",
    "//:frame/asset-conversion/Cargo.toml",
    "//:frame/asset-rate/Cargo.toml",
    "//:frame/assets/Cargo.toml",
    "//:frame/atomic-swap/Cargo.toml",
    "//:frame/aura/Cargo.toml",
    "//:frame/authority-discovery/Cargo.toml",
    "//:frame/authorship/Cargo.toml",
    "//:frame/babe/Cargo.toml",
    "//:frame/bags-list/Cargo.toml",
    "//:frame/bags-list/fuzzer/Cargo.toml",
    "//:frame/bags-list/remote-tests/Cargo.toml",
    "//:frame/balances/Cargo.toml",
    "//:frame/beefy-mmr/Cargo.toml",
    "//:frame/beefy/Cargo.toml",
    "//:frame/benchmarking/Cargo.toml",
    "//:frame/benchmarking/pov/Cargo.toml",
    "//:frame/bounties/Cargo.toml",
    "//:frame/child-bounties/Cargo.toml",
    "//:frame/collective/Cargo.toml",
    "//:frame/contracts/Cargo.toml",
    "//:frame/contracts/primitives/Cargo.toml",
    "//:frame/contracts/proc-macro/Cargo.toml",
    "//:frame/conviction-voting/Cargo.toml",
    "//:frame/core-fellowship/Cargo.toml",
    "//:frame/democracy/Cargo.toml",
    "//:frame/election-provider-multi-phase/Cargo.toml",
    "//:frame/election-provider-multi-phase/test-staking-e2e/Cargo.toml",
    "//:frame/election-provider-support/Cargo.toml",
    "//:frame/election-provider-support/benchmarking/Cargo.toml",
    "//:frame/election-provider-support/solution-type/Cargo.toml",
    "//:frame/election-provider-support/solution-type/fuzzer/Cargo.toml",
    "//:frame/elections-phragmen/Cargo.toml",
    "//:frame/examples/Cargo.toml",
    "//:frame/examples/basic/Cargo.toml",
    "//:frame/examples/default-config/Cargo.toml",
    "//:frame/examples/dev-mode/Cargo.toml",
    "//:frame/examples/kitchensink/Cargo.toml",
    "//:frame/examples/offchain-worker/Cargo.toml",
    "//:frame/examples/split/Cargo.toml",
    "//:frame/executive/Cargo.toml",
    "//:frame/fast-unstake/Cargo.toml",
    "//:frame/glutton/Cargo.toml",
    "//:frame/grandpa/Cargo.toml",
    "//:frame/identity/Cargo.toml",
    "//:frame/im-online/Cargo.toml",
    "//:frame/indices/Cargo.toml",
    "//:frame/insecure-randomness-collective-flip/Cargo.toml",
    "//:frame/lottery/Cargo.toml",
    "//:frame/membership/Cargo.toml",
    "//:frame/merkle-mountain-range/Cargo.toml",
    "//:frame/message-queue/Cargo.toml",
    "//:frame/multisig/Cargo.toml",
    "//:frame/nft-fractionalization/Cargo.toml",
    "//:frame/nfts/Cargo.toml",
    "//:frame/nfts/runtime-api/Cargo.toml",
    "//:frame/nicks/Cargo.toml",
    "//:frame/nis/Cargo.toml",
    "//:frame/node-authorization/Cargo.toml",
    "//:frame/nomination-pools/Cargo.toml",
    "//:frame/nomination-pools/benchmarking/Cargo.toml",
    "//:frame/nomination-pools/fuzzer/Cargo.toml",
    "//:frame/nomination-pools/runtime-api/Cargo.toml",
    "//:frame/nomination-pools/test-staking/Cargo.toml",
    "//:frame/offences/Cargo.toml",
    "//:frame/offences/benchmarking/Cargo.toml",
    "//:frame/preimage/Cargo.toml",
    "//:frame/proxy/Cargo.toml",
    "//:frame/ranked-collective/Cargo.toml",
    "//:frame/recovery/Cargo.toml",
    "//:frame/referenda/Cargo.toml",
    "//:frame/remark/Cargo.toml",
    "//:frame/root-offences/Cargo.toml",
    "//:frame/root-testing/Cargo.toml",
    "//:frame/salary/Cargo.toml",
    "//:frame/scheduler/Cargo.toml",
    "//:frame/scored-pool/Cargo.toml",
    "//:frame/session/Cargo.toml",
    "//:frame/session/benchmarking/Cargo.toml",
    "//:frame/society/Cargo.toml",
    "//:frame/staking/Cargo.toml",
    "//:frame/staking/reward-curve/Cargo.toml",
    "//:frame/staking/reward-fn/Cargo.toml",
    "//:frame/staking/runtime-api/Cargo.toml",
    "//:frame/state-trie-migration/Cargo.toml",
    "//:frame/statement/Cargo.toml",
    "//:frame/sudo/Cargo.toml",
    "//:frame/support/Cargo.toml",
    "//:frame/support/procedural/Cargo.toml",
    "//:frame/support/procedural/tools/Cargo.toml",
    "//:frame/support/procedural/tools/derive/Cargo.toml",
    "//:frame/support/test/Cargo.toml",
    "//:frame/support/test/compile_pass/Cargo.toml",
    "//:frame/support/test/pallet/Cargo.toml",
    "//:frame/system/Cargo.toml",
    "//:frame/system/benchmarking/Cargo.toml",
    "//:frame/system/rpc/runtime-api/Cargo.toml",
    "//:frame/timestamp/Cargo.toml",
    "//:frame/tips/Cargo.toml",
    "//:frame/transaction-payment/Cargo.toml",
    "//:frame/transaction-payment/asset-conversion-tx-payment/Cargo.toml",
    "//:frame/transaction-payment/asset-tx-payment/Cargo.toml",
    "//:frame/transaction-payment/rpc/Cargo.toml",
    "//:frame/transaction-payment/rpc/runtime-api/Cargo.toml",
    "//:frame/transaction-storage/Cargo.toml",
    "//:frame/treasury/Cargo.toml",
    "//:frame/try-runtime/Cargo.toml",
    "//:frame/uniques/Cargo.toml",
    "//:frame/utility/Cargo.toml",
    "//:frame/vesting/Cargo.toml",
    "//:frame/whitelist/Cargo.toml",
    "//:primitives/api/Cargo.toml",
    "//:primitives/api/proc-macro/Cargo.toml",
    "//:primitives/api/test/Cargo.toml",
    "//:primitives/application-crypto/Cargo.toml",
    "//:primitives/application-crypto/test/Cargo.toml",
    "//:primitives/arithmetic/Cargo.toml",
    "//:primitives/arithmetic/fuzzer/Cargo.toml",
    "//:primitives/authority-discovery/Cargo.toml",
    "//:primitives/block-builder/Cargo.toml",
    "//:primitives/blockchain/Cargo.toml",
    "//:primitives/consensus/aura/Cargo.toml",
    "//:primitives/consensus/babe/Cargo.toml",
    "//:primitives/consensus/beefy/Cargo.toml",
    "//:primitives/consensus/common/Cargo.toml",
    "//:primitives/consensus/grandpa/Cargo.toml",
    "//:primitives/consensus/pow/Cargo.toml",
    "//:primitives/consensus/slots/Cargo.toml",
    "//:primitives/core/Cargo.toml",
    "//:primitives/core/hashing/Cargo.toml",
    "//:primitives/core/hashing/proc-macro/Cargo.toml",
    "//:primitives/crypto/ec-utils/Cargo.toml",
    "//:primitives/database/Cargo.toml",
    "//:primitives/debug-derive/Cargo.toml",
    "//:primitives/externalities/Cargo.toml",
    "//:primitives/genesis-builder/Cargo.toml",
    "//:primitives/inherents/Cargo.toml",
    "//:primitives/io/Cargo.toml",
    "//:primitives/keyring/Cargo.toml",
    "//:primitives/keystore/Cargo.toml",
    "//:primitives/maybe-compressed-blob/Cargo.toml",
    "//:primitives/merkle-mountain-range/Cargo.toml",
    "//:primitives/metadata-ir/Cargo.toml",
    "//:primitives/npos-elections/Cargo.toml",
    "//:primitives/npos-elections/fuzzer/Cargo.toml",
    "//:primitives/offchain/Cargo.toml",
    "//:primitives/panic-handler/Cargo.toml",
    "//:primitives/rpc/Cargo.toml",
    "//:primitives/runtime-interface/Cargo.toml",
    "//:primitives/runtime-interface/proc-macro/Cargo.toml",
    "//:primitives/runtime-interface/test-wasm-deprecated/Cargo.toml",
    "//:primitives/runtime-interface/test-wasm/Cargo.toml",
    "//:primitives/runtime-interface/test/Cargo.toml",
    "//:primitives/runtime/Cargo.toml",
    "//:primitives/session/Cargo.toml",
    "//:primitives/staking/Cargo.toml",
    "//:primitives/state-machine/Cargo.toml",
    "//:primitives/statement-store/Cargo.toml",
	"//:primitives/std/Cargo.toml",
    "//:primitives/storage/Cargo.toml",
    "//:primitives/test-primitives/Cargo.toml",
    "//:primitives/timestamp/Cargo.toml",
    "//:primitives/tracing/Cargo.toml",
    "//:primitives/transaction-pool/Cargo.toml",
    "//:primitives/transaction-storage-proof/Cargo.toml",
    "//:primitives/trie/Cargo.toml",
    "//:primitives/version/Cargo.toml",
    "//:primitives/version/proc-macro/Cargo.toml",
    "//:primitives/wasm-interface/Cargo.toml",
    "//:primitives/weights/Cargo.toml",
    "//:scripts/ci/node-template-release/Cargo.toml",
    "//:test-utils/Cargo.toml",
    "//:test-utils/client/Cargo.toml",
    "//:test-utils/derive/Cargo.toml",
    "//:test-utils/runtime/Cargo.toml",
    "//:test-utils/runtime/client/Cargo.toml",
    "//:test-utils/runtime/transaction-pool/Cargo.toml",
    "//:test-utils/test-crate/Cargo.toml",
    "//:utils/binary-merkle-tree/Cargo.toml",
    "//:utils/build-script-utils/Cargo.toml",
    "//:utils/fork-tree/Cargo.toml",
    "//:utils/frame/benchmarking-cli/Cargo.toml",
    "//:utils/frame/frame-utilities-cli/Cargo.toml",
    "//:utils/frame/generate-bags/Cargo.toml",
    "//:utils/frame/generate-bags/node-runtime/Cargo.toml",
    "//:utils/frame/remote-externalities/Cargo.toml",
    "//:utils/frame/rpc/client/Cargo.toml",
    "//:utils/frame/rpc/state-trie-migration-rpc/Cargo.toml",
    "//:utils/frame/rpc/support/Cargo.toml",
    "//:utils/frame/rpc/system/Cargo.toml",
    "//:utils/frame/try-runtime/cli/Cargo.toml",
    "//:utils/prometheus/Cargo.toml",
    "//:utils/wasm-builder/Cargo.toml",
    ],
    annotations = {
     "*": [crate.annotation(
      build_script_env = {"PROTOC": "$(execpath @com_google_protobuf//:protoc)"},
      build_script_tools = ["@com_google_protobuf//:protoc",],
     )],
    }
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()
