[package]
name = "polkadot-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."

[dependencies]
clap = { version = "2.27", features = ["yaml"] }
env_logger = "0.4"
error-chain = "0.11"
log = "0.3"
polkadot-client = { path = "../client" }
substrate-executor = { path = "../executor" }
polkadot-primitives = { path = "../primitives" }
polkadot-rpc-servers = { path = "../rpc-servers" }
