[package]
name = "polkadot-client-api"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
substrate-client = { path = "../client" }
substrate-codec = { path = "../codec" }
substrate-state-machine = { path = "../state-machine" }
polkadot-primitives = { path = "../polkadot-primitives" }
